# autoconf file for vncproxy
# enlightened by http://code.google.com/p/google-ctemplate/source/browse/trunk/configure.ac
# author: Santa Zhang <santa1987@gmail.com>

# make sure we're interpreted by some minimal autoconf
AC_PREREQ(2.57)

AC_INIT(vncproxy, 0.1-nightly, http://github.com/santazhang/vncproxy/issues, , http://github.com/santazhang/vncproxy)

AC_CONFIG_MACRO_DIR([m4])
AC_CANONICAL_HOST
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Check whether some low-level functions/files are available
AC_HEADER_STDC

# Check pthread
ACX_PTHREAD

AC_OUTPUT([Makefile])
